Cleanup unnecessary profiles
Signed-off-by: marko-bekhta <marko.prykladna@gmail.com>